feat: Added entity, repository, security config...
Added User (entity), UserRepository, SecurityConfig, sql-ddl script to initialize the "users" table, docker-compose.yml to up the postgresql image for the database.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'smartqueue'
 
-include 'services:config-server', 'services:discovery'
+include 'services:config-server', 'services:discovery', 'services:auth'
