--- a/services/config-server/src/main/resources/configurations/auth-service.yml
+++ b/services/config-server/src/main/resources/configurations/auth-service.yml
@@ -11,9 +11,27 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: validate
-    show-sql: false
+    show-sql: true
   flyway:
     baseline-on-migrate: true
     enabled: true
     user: ${spring.datasource.username}
     password: ${spring.datasource.password}
+
+jwt:
+  secret: secretkeyPasswordForAuth12312312312313213123123sdfsdf
+  life-time: 1800000
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    health:
+      show-details: always
+
+bootstrap:
+  admin:
+    username: ${BOOTSTRAP_ADMIN_USERNAME:admin}
+    password: ${BOOTSTRAP_ADMIN_PASSWORD:}
