--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'smartqueue'
 
-include 'services:config-server', 'services:discovery', 'services:auth'
+include 'services:config-server', 'services:discovery', 'services:auth', 'services:gateway'
