--- a/services/config-server/src/main/resources/configurations/auth-service.yml
+++ b/services/config-server/src/main/resources/configurations/auth-service.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/smartqueueDB
+    url: jdbc:postgresql://localhost:5432/authDB
     username: user
     password: pass
   jpa:
