feat: Added kafka, KafkaConfig in queue-service.

--- a/services/config-server/src/main/resources/configurations/queue-service.yml
+++ b/services/config-server/src/main/resources/configurations/queue-service.yml
@@ -17,3 +17,8 @@ spring:
     enabled: true
     user: ${spring.datasource.username}
     password: ${spring.datasource.password}
+
+smartqueue:
+  kafka:
+    topic: queue-event
+    bootstrap-server: localhost:9092
