--- a/services/config-server/src/main/resources/configurations/worker-service.yml
+++ b/services/config-server/src/main/resources/configurations/worker-service.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8083
+  port: 8084
 
 spring:
   datasource:
@@ -12,18 +12,10 @@ spring:
     hibernate:
       ddl-auto: validate
     show-sql: true
-  flyway:
-    baseline-on-migrate: true
-    enabled: true
-    user: ${spring.datasource.username}
-    password: ${spring.datasource.password}
 
 smartqueue:
   kafka:
     topic: queue-event
     bootstrap-server: localhost:9092
-
-#logging:
-#  level:
-#    org.apache.kafka: DEBUG
-#    org.springframework.kafka: DEBUG
+    consumer:
+      group-id: worker-consumer
