--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
 rootProject.name = 'smartqueue'
 
 include 'services:config-server', 'services:discovery', 'services:auth', 'services:gateway', 'services:queue', 'services:worker'
+include 'services:notification'
