--- a/services/config-server/src/main/resources/configurations/notification-service.yml
+++ b/services/config-server/src/main/resources/configurations/notification-service.yml
@@ -1,6 +1,23 @@
 server:
   port: 8085
 
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5434/notification
+    username: user
+    password: pass
+  jpa:
+    show-sql: true
+    database: POSTGRESQL
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: validate
+  flyway:
+    baseline-on-migrate: true
+    enabled: true
+    user: ${spring.datasource.username}
+    password: ${spring.datasource.password}
+
 smartqueue:
   kafka:
     topic: notifications
