--- a/services/config-server/src/main/resources/configurations/notification-service.yml
+++ b/services/config-server/src/main/resources/configurations/notification-service.yml
@@ -6,6 +6,7 @@ spring:
     url: jdbc:postgresql://localhost:5434/notification
     username: user
     password: pass
+    driverClassName: org.postgresql.Driver
   jpa:
     show-sql: true
     database: POSTGRESQL
