test: Added zipkin tracing to services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,15 @@ services:
       KAFKA_NUM_PARTITIONS: 3
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
 
+  zipkin:
+    image: openzipkin/zipkin
+    container_name: zipkin
+    ports:
+      - "9411:9411"
+    environment:
+      STORAGE_TYPE: mem
+    restart: unless-stopped
+
 volumes:
   postgres:
   postgresQueue:
