--- a/services/config-server/src/main/resources/configurations/queue-service.yml
+++ b/services/config-server/src/main/resources/configurations/queue-service.yml
@@ -24,6 +24,21 @@ smartqueue:
     topic: queue-event
     bootstrap-server: localhost:9092
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    health:
+      show-details: always
+  tracing:
+    sampling:
+      probability: 1.0
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
+
 #logging:
 #  level:
 #    org.apache.kafka: DEBUG
