--- a/services/config-server/src/main/resources/configurations/gateway-service.yml
+++ b/services/config-server/src/main/resources/configurations/gateway-service.yml
@@ -8,7 +8,7 @@ spring:
         - id: auth-service
           uri: lb://AUTH-SERVICE
           predicates:
-            - Path=/api/v1/auth/**
+            - Path=/api/v1/auth/**,/api/v1/user/**
 
 eureka:
   client:
